--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : William deLone Hutter
 description              : William deLone Hutter - Projects and CV 
-baseurl                  : "" # Set this to "portfolio-<your-github-username>" 
+baseurl                  : "/spring-2025-portfolio-wdh64" # Set this to "portfolio-<your-github-username>" 
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 
 # Theme and Style
